refact: separate ThreadRacing methods to improve development experience