@@ -1,5 +1,9 @@
 package pedroaba.java.race.ui;
 
+import kotlin.Pair;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import pedroaba.java.race.Beetle;
 import pedroaba.java.race.Ferrari;
 import pedroaba.java.race.constants.Config;
@@ -7,11 +11,12 @@ import pedroaba.java.race.entities.Car;
 import pedroaba.java.race.entities.Race;
 import pedroaba.java.race.enums.GameEventName;
 import pedroaba.java.race.events.*;
+import pedroaba.java.race.ui.fonts.SakanaFont;
+import pedroaba.java.race.ui.images.*;
 import pedroaba.java.race.utils.FormatEpochSecondToString;
-import pedroaba.java.race.ui.CarVisual;
+import pedroaba.java.race.utils.Position;
+import pedroaba.java.race.utils.Size;
 import processing.core.PApplet;
-import processing.core.PFont;
-import processing.core.PImage;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -19,29 +24,43 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 
 public class ThreadRacing extends PApplet {
+    private final Map<Long, CarVisual> carVisuals = new ConcurrentHashMap<>();
+    private final List<String> raceMessages = new ArrayList<>();
+    private final List<RaceFinishEvent> finishEvents = Collections.synchronizedList(new ArrayList<>());
+    private final AtomicInteger laneCounter = new AtomicInteger(0);
     private Race race;
     private Dispatcher<Object> dispatcher;
-    private Map<Long, CarVisual> carVisuals = new ConcurrentHashMap<>();
-    private List<String> raceMessages = new ArrayList<>();
     private boolean raceFinished = false;
-    private List<RaceFinishEvent> finishEvents = Collections.synchronizedList(new ArrayList<>());
-    private AtomicInteger laneCounter = new AtomicInteger(0);
     private boolean countdownStarted = false;
     private int countdownValue = 3;
     private long lastCountdownTime = 0;
     private boolean showSemaphore = true;
 
-    // Imagens
-    private PImage ferrariImg;
-    private PImage beetleImg;
-    private PImage lamboImg;
-    private PImage bananaImg;
-    private PImage boostImg;
-    private PImage shellImg;
+    private Thread raceThread;
 
-    private PFont titleFont;
-    private PFont defaultFont;
+    private FerrariImage ferrariImg;
+    private BeetleImage beetleImg;
+    private LamborghiniImage lamboImg;
+    private BananaImage bananaImg;
+    private BoostImage boostImg;
+    private ShellImage shellImg;
 
+    private SakanaFont sakanaFont;
+
+    @Override
+    public void exit() {
+        raceFinished = true;
+        if (raceThread != null && raceThread.isAlive()) {
+            raceThread.interrupt();
+            try {
+                raceThread.join();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }
+
+        super.exit();
+    }
 
     @Override
     public void settings() {
@@ -50,30 +69,26 @@ public class ThreadRacing extends PApplet {
 
     @Override
     public void setup() {
-        frameRate(60);
-        background(0);
-        smooth();
+        initializeApp();
 
-        // Carregando fontes
-        titleFont = createFont("src/fonts/Sakana.ttf", 14, true);
-        defaultFont = createFont("src/fonts/Sakana.ttf", 14, true); // TODO
-        textFont(defaultFont);
+        sakanaFont = new SakanaFont();
+        textFont(sakanaFont.font());
 
-        ferrariImg = loadImage("src/images/Carro_1.png");  // Ferrari
-        beetleImg = loadImage("src/images/Carro_2.png");   // Beetle
-        lamboImg = loadImage("src/images/Carro_3.png");    // Lamborghini
+        ferrariImg = new FerrariImage();
+        beetleImg = new BeetleImage();
+        lamboImg = new LamborghiniImage();
 
-        bananaImg = loadImage("src/images/BananaV2.png");
-        boostImg = loadImage("src/images/Boost.png");
-        shellImg = loadImage("src/images/Shell.png");
+        bananaImg = new BananaImage();
+        boostImg = new BoostImage();
+        shellImg = new ShellImage();
 
-        // Redimensionando imagens
-        if (ferrariImg != null) ferrariImg.resize(Config.CAR_WIDTH, Config.CAR_HEIGHT);
-        if (beetleImg != null) beetleImg.resize(Config.CAR_WIDTH, Config.CAR_HEIGHT);
-        if (lamboImg != null) lamboImg.resize(Config.CAR_WIDTH, Config.CAR_HEIGHT);
-        if (bananaImg != null) bananaImg.resize(30, 30);
-        if (boostImg != null) boostImg.resize(30, 30);
-        if (shellImg != null) shellImg.resize(30, 30);
+        resizeCarImage(ferrariImg);
+        resizeCarImage(beetleImg);
+        resizeCarImage(lamboImg);
+
+        resizePowerImage(shellImg);
+        resizePowerImage(bananaImg);
+        resizePowerImage(boostImg);
 
         setupRace();
     }
@@ -83,118 +98,120 @@ public class ThreadRacing extends PApplet {
         background(240);
         updateCarPositions();
 
-        // Titulo
-        textFont(titleFont);
-        fill(0);
-        textSize(64);
-        textAlign(CENTER, CENTER);
-        text("Thread Racing", Config.WIDTH / 2, 60);
-        textFont(defaultFont);
+        addAppTitle();
 
-        // Countdown
         if (countdownStarted) {
             long currentTime = System.currentTimeMillis();
-
-            // Atualiza a cada segundo
             if (currentTime - lastCountdownTime >= 1000) {
                 countdownValue--;
                 lastCountdownTime = currentTime;
 
-                // Inicia a corrida
                 if (countdownValue < 1) {
                     countdownStarted = false;
                     showSemaphore = false;
 
-                    // Inicia a corrida em uma thread separada para não bloquear o Processing :v
-                    new Thread(() -> race.race()).start();
+                    raceThread = new Thread(() -> race.race());
+                    raceThread.start();
                 }
             }
 
             if (showSemaphore) {
                 drawSemaphore(countdownValue);
             }
-        } else {
+        }
+
+        if (!countdownStarted) {
             drawTrack();
         }
 
-        // Desenha carros
         drawCars();
 
-        // Desenha resultados
         if (raceFinished) {
             drawResults();
         }
 
-        // Desenha log da corrida
         drawMessages();
+    }
+
+    public void addAppTitle() {
+        float titleXPosition = (float) Config.WIDTH / 2;
+
+        textFont(sakanaFont.font());
+        fill(0);
+        textSize(64);
+        textAlign(CENTER, CENTER);
+        text("Thread Racing", titleXPosition, 60);
+        textFont(sakanaFont.font());
+    }
+
+    private void resizePowerImage(@Nullable Image powerImage) {
+        try {
+            if (powerImage != null) {
+                powerImage.image().resize(30, 30);
+            }
+        } catch (Exception e) {
+            e.fillInStackTrace();
+        }
+    }
+
+    private void resizeCarImage(@Nullable Image carImage) {
+        try {
+            if (carImage != null) {
+                carImage.image().resize(Config.CAR_WIDTH, Config.CAR_HEIGHT);
+            }
+        } catch (Exception e) {
+            e.fillInStackTrace();
+        }
+    }
+
+    private void initializeApp() {
+        frameRate(60);
+        background(0);
+        smooth();
     }
 
     private void setupRace() {
         dispatcher = new Dispatcher<>("RaceDispatcher");
-
-        // Cria listeners para eventos da corrida
         setupListeners();
 
-        // Corrida com X carros e comprimento de pista Y
+        // TODO - Make it imputable by user
         race = new Race(5, dispatcher, 100);
 
-        // Inicia o countdown
         countdownStarted = true;
         lastCountdownTime = System.currentTimeMillis();
     }
 
     private void setupListeners() {
-        // Listener para início de corrida
-        Listener<Object> startRaceListener = new Listener<>(GameEventName.RACE_STARTED);
-        startRaceListener.on((event) -> {
-            RaceStartedEvent startedEvent = (RaceStartedEvent) event;
-            String message = "Corrida iniciada: " + FormatEpochSecondToString.formatEpochSecond(startedEvent.startTime());
+        Listener<Object> startRaceListener = getRaceListener();
+        Listener<Object> movementListener = getMovementListener();
+        Listener<Object> finishListener = getFinishListener();
+        Listener<Object> allFinishListener = getAllFinishListener();
+
+        dispatcher.addListener(startRaceListener);
+        dispatcher.addListener(movementListener);
+        dispatcher.addListener(finishListener);
+        dispatcher.addListener(allFinishListener);
+    }
+
+    private @NotNull Listener<Object> getAllFinishListener() {
+        Listener<Object> allFinishListener = new Listener<>(GameEventName.RACE_FINISHED);
+        allFinishListener.on((event) -> {
+            AllCarFinishEvent allFinishEvent = (AllCarFinishEvent) event;
+            String message = "Corrida finalizada: " + FormatEpochSecondToString.formatEpochSecond(allFinishEvent.finishTime());
 
             synchronized (raceMessages) {
                 raceMessages.add(message);
                 if (raceMessages.size() > 10) {
-                    raceMessages.remove(0);
+                    raceMessages.removeFirst();
                 }
             }
+
+            raceFinished = true;
         });
+        return allFinishListener;
+    }
 
-        // Listener para movimento dos carros
-        Listener<Object> movementListener = new Listener<>(GameEventName.RUNNING);
-        movementListener.on((event) -> {
-            MovementEvent movementEvent = (MovementEvent) event;
-            Car car = movementEvent.car();
-            long threadId = car.threadId();
-
-            // Cria visualização do carro se não existir
-            if (!carVisuals.containsKey(threadId)) {
-                PImage carImage;
-                if (car instanceof Beetle) {
-                    carImage = beetleImg;
-                } else if (car instanceof Ferrari) {
-                    carImage = ferrariImg;
-                } else {
-                    carImage = lamboImg;
-                }
-
-                int laneIndex = laneCounter.getAndIncrement();
-                CarVisual visual = new CarVisual(
-                        car.getClass().getSimpleName(),
-                        threadId,
-                        carImage,
-                        laneIndex,
-                        movementEvent.speed()
-                );
-                carVisuals.put(threadId, visual);
-            }
-
-            // Atualizando a posição do carro
-            CarVisual visual = carVisuals.get(threadId);
-            visual.setPosition(movementEvent.position());
-            visual.setSpeed(movementEvent.speed());
-            visual.setActivePower(car.getActivePowerName()); // Poder ativo
-        });
-
-        // Listener para fim de corrida de um carro
+    private @NotNull Listener<Object> getFinishListener() {
         Listener<Object> finishListener = new Listener<>(GameEventName.FINISHED);
         finishListener.on((event) -> {
             RaceFinishEvent finishEvent = (RaceFinishEvent) event;
@@ -204,224 +221,305 @@ public class ThreadRacing extends PApplet {
             synchronized (raceMessages) {
                 raceMessages.add(message);
                 if (raceMessages.size() > 10) {
-                    raceMessages.remove(0);
+                    raceMessages.removeFirst();
                 }
             }
 
             finishEvents.add(finishEvent);
-
-            // Marca o carro como finalizado
             CarVisual visual = carVisuals.get(car.threadId());
             if (visual != null) {
                 visual.setFinished(true);
             }
         });
+        return finishListener;
+    }
 
-        // Listener para todos os carros terminarem
-        Listener<Object> allFinishListener = new Listener<>(GameEventName.RACE_FINISHED);
-        allFinishListener.on((event) -> {
-            AllCarFinishEvent allFinishEvent = (AllCarFinishEvent) event;
-            String message = "Corrida finalizada: " +
-                    FormatEpochSecondToString.formatEpochSecond(allFinishEvent.finishTime());
+    private @NotNull Listener<Object> getMovementListener() {
+        Listener<Object> movementListener = new Listener<>(GameEventName.RUNNING);
+        movementListener.on((event) -> {
+            MovementEvent movementEvent = (MovementEvent) event;
+            Car car = movementEvent.car();
+            long threadId = car.threadId();
+
+            if (!carVisuals.containsKey(threadId)) {
+                CarVisual visual = getCarVisual(car, threadId, movementEvent);
+                carVisuals.put(threadId, visual);
+            }
+
+            CarVisual visual = carVisuals.get(threadId);
+            visual.setPosition(movementEvent.position());
+            visual.setSpeed(movementEvent.speed());
+            visual.setActivePower(car.getActivePowerName());
+        });
+
+        return movementListener;
+    }
+
+    private @NotNull Listener<Object> getRaceListener() {
+        Listener<Object> startRaceListener = new Listener<>(GameEventName.RACE_STARTED);
+        startRaceListener.on((event) -> {
+            RaceStartedEvent startedEvent = (RaceStartedEvent) event;
+            String message = "Corrida iniciada: " + FormatEpochSecondToString.formatEpochSecond(startedEvent.startTime());
 
             synchronized (raceMessages) {
                 raceMessages.add(message);
                 if (raceMessages.size() > 10) {
-                    raceMessages.remove(0);
+                    raceMessages.removeFirst();
                 }
             }
-
-            raceFinished = true;
         });
+        return startRaceListener;
+    }
 
-        dispatcher.addListener(startRaceListener);
-        dispatcher.addListener(movementListener);
-        dispatcher.addListener(finishListener);
-        dispatcher.addListener(allFinishListener);
+    private @NotNull CarVisual getCarVisual(@NotNull Car car, long threadId, MovementEvent movementEvent) {
+        Image carImage = switch (car) {
+            case Beetle _ -> beetleImg;
+            case Ferrari _ -> ferrariImg;
+            default -> lamboImg;
+        };
+
+        int laneIndex = laneCounter.getAndIncrement();
+        return new CarVisual(car.getClass().getSimpleName(), threadId, carImage.image(), laneIndex, movementEvent.speed());
     }
 
     private void drawTrack() {
-        // Fundo da pista
+        drawBottomOfTrack();
+        drawStartingLine();
+        drawFinishingLine();
+
+        noStroke();
+        for (int i = 0; i < carVisuals.size(); i++) {
+            drawLane(i);
+
+            drawDistanceMarkers(i);
+            noStroke();
+        }
+    }
+
+    private void drawBottomOfTrack() {
         fill(100);
         rect(50, Config.TRACK_Y_START - 20, Config.WIDTH - 100, Config.LANE_HEIGHT * carVisuals.size() + 40);
+    }
 
-        // Linha de largada
+    private void drawStartingLine() {
         stroke(255);
         line(60, Config.TRACK_Y_START - 20, 60, Config.TRACK_Y_START + Config.LANE_HEIGHT * carVisuals.size() + 20);
+    }
 
-        // Linha de chegada
+    private void drawFinishingLine() {
         stroke(255);
         fill(255, 0, 0, 100);
         rect(Config.FINISH_LINE_X, Config.TRACK_Y_START - 20, 10, Config.LANE_HEIGHT * carVisuals.size() + 40);
+    }
 
-        // Lanes
-        noStroke();
-        for (int i = 0; i < carVisuals.size(); i++) {
-            if (i % 2 == 0) {
-                fill(100);
-            } else {
-                fill(90);
-            }
-            rect(60, Config.TRACK_Y_START + i * Config.LANE_HEIGHT, Config.FINISH_LINE_X - 60, Config.LANE_HEIGHT);
+    private void drawLane(int laneIndex) {
+        Boolean isEvenLane = laneIndex % 2 == 0;
+        paintLaneBackground(isEvenLane);
 
-            // Marcadores de distancia
-            stroke(255, 255, 255, 100);
-            for (int mark = 0; mark < 10; mark++) {
-                float x = 60 + (Config.FINISH_LINE_X - 60) * mark / 10.0f;
-                line(x, Config.TRACK_Y_START + i * Config.LANE_HEIGHT,
-                        x, Config.TRACK_Y_START + (i + 1) * Config.LANE_HEIGHT);
-            }
-            noStroke();
+        rect(60, Config.TRACK_Y_START + laneIndex * Config.LANE_HEIGHT, Config.FINISH_LINE_X - 60, Config.LANE_HEIGHT);
+    }
+
+    private void drawDistanceMarkers(int laneIndex) {
+        stroke(255, 255, 255, 100);
+        for (int mark = 0; mark < 10; mark++) {
+            float markXPosition = 60 + (Config.FINISH_LINE_X - 60) * mark / 10.0f;
+            line(markXPosition, Config.TRACK_Y_START + laneIndex * Config.LANE_HEIGHT, markXPosition, Config.TRACK_Y_START + (laneIndex + 1) * Config.LANE_HEIGHT);
         }
+    }
+
+    private void paintLaneBackground(@NotNull Boolean isEvenLane) {
+        if (isEvenLane) {
+            fill(100);
+            return;
+        }
+
+        fill(90);
     }
 
     private void drawCars() {
         for (CarVisual carVisual : carVisuals.values()) {
-            // Calcula X baseada na posição da corrida (0 a 100)
-            float trackLength = Config.FINISH_LINE_X - 60;
-            float xPos = 60 + min((float)(carVisual.displayPosition / 100.0 * trackLength), trackLength);
-            float yPos = Config.TRACK_Y_START + carVisual.laneIndex * Config.LANE_HEIGHT + Config.LANE_HEIGHT / 2;
+            Position position = calculateCarPosition(carVisual);
+            putShadowOnCar(position);
+            rotateCar(carVisual, position);
+            putNameAndVelocityOnCar(carVisual, position);
 
-            // Sombra do carro
-            fill(0, 0, 0, 50);
-            noStroke();
-            ellipse(xPos + 5, yPos + 15, 50, 20);
-
-            // Desenha o carro rotacionado para a direita
-            pushMatrix();
-            translate(xPos, yPos);
-            rotate(HALF_PI); // Rotaciona 90 graus (sprite aponta para cima, queremos para a direita)
-            imageMode(CENTER);
-            image(carVisual.image, 0, 0);
-            popMatrix();
-
-            // Nome e Velocidade ao lado do carro
-            textAlign(LEFT, CENTER);
-            textSize(15);
-            fill(0);
-            text(carVisual.name + " [" + carVisual.threadId + "]", xPos + 50, yPos - 10);
-            text("Vel: " + nf((float)carVisual.speed, 1, 2), xPos + 50, yPos + 8);
-
-            // Marcador qunado terminar
             if (carVisual.finished) {
-                fill(0, 255, 0);
-                ellipse(xPos + 30, yPos - 15, 15, 15);
-                fill(0);
-                textSize(10);
-                textAlign(CENTER, CENTER);
-                text("✓", xPos + 30, yPos - 15);
+                putFinishMark(position.x(), position.y());
             }
 
             if (carVisual.activePower != null && !carVisual.finished) {
-                PImage powerImg;
+                Image powerImg;
 
-                if (carVisual.activePower.equals("Banana")) {
-                    powerImg = bananaImg;
-                    text("Banana!", xPos, yPos - 25);
-                } else if (carVisual.activePower.equals("Boost")) {
-                    powerImg = boostImg;
-                    text("Boost!", xPos, yPos - 25);
-                } else if (carVisual.activePower.equals("RedShell")) {
-                    powerImg = shellImg;
-                    text("Red Shell!", xPos, yPos - 25);
-                } else {
-                    continue; // Poder desconhecido, não mostrar
+                switch (carVisual.activePower) {
+                    case "Banana" -> powerImg = bananaImg;
+                    case "Boost" -> powerImg = boostImg;
+                    case "RedShell" -> powerImg = shellImg;
+                    default -> {
+                        continue;
+                    }
                 }
 
-                image(powerImg, xPos - 25, yPos - 15);
+                text(powerImg.getName(), position.x(), position.y() - 25);
+                image(powerImg.image(), position.x() - 25, position.y() - 15);
             }
         }
     }
 
-    private void drawResults() {
-        // Configurações do painel de resultados
-        int panelWidth = 400;
-        int headerHeight = 50;
-        int rowHeight = 30;
-        int panelHeight = headerHeight + (finishEvents.size() * rowHeight) + 20;
+    @Contract("_ -> new")
+    private @NotNull Position calculateCarPosition(@NotNull CarVisual visual) {
+        float trackLength = Config.FINISH_LINE_X - 60;
+        float xPos = 60 + min((float) (visual.displayPosition / 100.0 * trackLength), trackLength);
+        float yPos = Config.TRACK_Y_START + visual.laneIndex * Config.LANE_HEIGHT + (float) Config.LANE_HEIGHT / 2;
 
-        // Posiciona o painel no centro da tela
-        int panelX = (Config.WIDTH - panelWidth) / 2;
-        int panelY = (Config.HEIGHT - panelHeight) / 2;
+        return new Position(xPos, yPos);
+    }
 
-        // Desenha o fundo do painel com borda
-        fill(255, 255, 255, 230);
-        stroke(50);
-        strokeWeight(2);
-        rect(panelX, panelY, panelWidth, panelHeight, 10);
+    private void putShadowOnCar(@NotNull Position position) {
+        fill(0, 0, 0, 50);
         noStroke();
+        ellipse(position.x() + 5, position.y() + 15, 50, 20);
+    }
 
-        // Cabeçalho com fundo destacado
-        fill(30, 30, 120);
-        rect(panelX, panelY, panelWidth, headerHeight, 10, 10, 0, 0);
+    private void rotateCar(@NotNull CarVisual car, @NotNull Position position) {
+        pushMatrix();
+        translate(position.x(), position.y());
+        rotate(HALF_PI);
+        imageMode(CENTER);
+        image(car.image, 0, 0);
+        popMatrix();
+    }
 
-        // Título "RESULTADOS"
-        fill(255);
+    private void putNameAndVelocityOnCar(@NotNull CarVisual car, @NotNull Position position) {
+        textAlign(LEFT, CENTER);
+        textSize(15);
+        fill(0);
+        text(car.name + " [" + car.threadId + "]", position.x() + 50, position.y() - 10);
+        text("Vel: " + nf(car.speed.floatValue(), 1, 2), position.x() + 50, position.y() + 8);
+    }
+
+    public void putFinishMark(float x, float y) {
+        fill(0, 255, 0);
+        ellipse(x + 30, y - 15, 15, 15);
+        fill(0);
+        textSize(10);
         textAlign(CENTER, CENTER);
-        textSize(24);
-        text("RESULTADOS", panelX + panelWidth/2, panelY + headerHeight/2);
+        text("✓", x + 30, y - 15);
+    }
 
-        // Ordena os eventos por tempo de chegada
+    private void drawResults() {
+        float rowHeight = 30f;
+        var resultPanel = drawResultPanel(rowHeight);
+        Position panelPosition = resultPanel.getFirst();
+        Size headerPanelSize = resultPanel.getSecond();
+
         List<RaceFinishEvent> sortedEvents = new ArrayList<>(finishEvents);
         sortedEvents.sort(Comparator.comparing(RaceFinishEvent::finishTime));
 
-        // Variáveis para posicionamento das informações
-        int startY = panelY + headerHeight + 15;
-        int posX = panelX + 30;
-        int nameX = panelX + 70;
-        int timeX = panelX + panelWidth - 80;
+        float startY = panelPosition.y() + headerPanelSize.height() + 15f;
+        float posX = panelPosition.x() + 30f;
+        float nameX = panelPosition.x() + 70f;
+        float timeX = panelPosition.x() + headerPanelSize.width() - 80f;
 
-        // Linha divisória abaixo dos cabeçalhos
-        stroke(200);
-        strokeWeight(1);
-        line(panelX + 20, startY, panelX + panelWidth - 20, startY);
-        noStroke();
+        Position divisionLinePosition = new Position(-1f, startY);
+        drawHeaderDivisionLine(divisionLinePosition, panelPosition, headerPanelSize);
 
-        // Desenha cada linha de resultado
         for (int i = 0; i < sortedEvents.size(); i++) {
             RaceFinishEvent event = sortedEvents.get(i);
             Car car = event.car();
 
-            // Posição Y para esta linha
-            int yPos = startY + (i * rowHeight) + rowHeight/2;
+            float yPos = startY + (i * rowHeight) + rowHeight / 2;
+            Position position = new Position(posX, yPos);
+            Position namePosition = new Position(nameX, yPos);
+            Position timePosition = new Position(timeX, yPos);
 
-            // Destaca a linha do 1º colocado
-            if (i == 0) {
-                fill(255, 250, 200, 100);
-                rect(panelX + 10, yPos - rowHeight/2, panelWidth - 20, rowHeight, 5);
-            }
-            // Desenha linha com tom alternado para facilitar leitura
-            else if (i % 2 == 1) {
-                fill(240, 240, 240, 100);
-                rect(panelX + 10, yPos - rowHeight/2, panelWidth - 20, rowHeight);
-            }
-
-            // Posição
-            fill(i == 0 ? color(180, 150, 0) : (i == 1 ? color(120) : (i == 2 ? color(150, 90, 30) : color(50))));
-            textAlign(CENTER, CENTER);
-            textSize(16);
-            text((i+1) + "º", posX, yPos);
-
-            // Nome do carro
-            fill(0);
-            textAlign(LEFT, CENTER);
-            textSize(14);
-            text(car.getClass().getSimpleName() + " [" + car.threadId() + "]", nameX, yPos);
-
-            // Tempo de chegada
-            textAlign(RIGHT, CENTER);
-            text(FormatEpochSecondToString.formatEpochSecond(event.getFinishTime()).substring(11), timeX, yPos);
+            drawResultLine(car, i, rowHeight, position, panelPosition, namePosition, timePosition, headerPanelSize, event.getFinishTime());
         }
     }
 
+    @Contract("_ -> new")
+    private @NotNull Pair<Position, Size> drawResultPanel(float rowHeight) {
+        Size headerPanelSize = new Size(400f, 50f);
+        float panelHeight = headerPanelSize.height() + ((float) finishEvents.size() * rowHeight) + 20f;
+
+        Size panelSize = new Size(400f, panelHeight);
+
+        float panelX = (Config.WIDTH - panelSize.width()) / 2f;
+        float panelY = (Config.HEIGHT - panelSize.height()) / 2f;
+
+        Position panelPosition = new Position(panelX, panelY);
+
+        drawPanelBackground(panelPosition, panelSize);
+        drawPanelHeader(panelPosition, headerPanelSize);
+
+        return new Pair<>(panelPosition, headerPanelSize);
+    }
+
+    private void drawPanelBackground(@NotNull Position position, @NotNull Size size) {
+        fill(255, 255, 255, 230);
+        stroke(50);
+        strokeWeight(2);
+        rect(position.x(), position.y(), size.width(), size.height(), 10);
+        noStroke();
+    }
+
+    private void drawPanelHeader(@NotNull Position position, @NotNull Size size) {
+        fill(30, 30, 120);
+        rect(position.x(), position.y(), size.width(), size.height(), 10, 10, 0, 0);
+
+        fill(255);
+        textAlign(CENTER, CENTER);
+        textSize(24);
+        text("RESULTADOS", position.x() + size.width() / 2, position.y() + size.height() / 2);
+    }
+
+    private void drawHeaderDivisionLine(@NotNull Position position, @NotNull Position panelPosition, @NotNull Size size) {
+        stroke(200);
+        strokeWeight(1);
+        line(panelPosition.x() + 20f, position.y(), panelPosition.x() + size.width() - 20f, position.y());
+        noStroke();
+    }
+
+    private void drawResultLine(Car car, Integer carIndex, Float rowHeight, Position position, Position panelPosition, Position namePosition, Position timePosition, Size panelSize, Long finishTime) {
+        if (carIndex == 0) {
+            fill(255, 250, 200, 100);
+            rect(panelPosition.x() + 10, position.y() - rowHeight / 2, panelSize.width() - 20, rowHeight, 5);
+        } else if (carIndex % 2 == 1) {
+            fill(240, 240, 240, 100);
+            rect(panelPosition.x() + 10, position.y() - rowHeight / 2, panelSize.width() - 20, rowHeight);
+        }
+
+        int textColor;
+        switch (carIndex) {
+            case 0 -> textColor = color(180, 150, 0);
+            case 1 -> textColor = color(120);
+            case 2 -> textColor = color(150, 90, 30);
+            default -> textColor = color(50);
+        }
+
+        fill(textColor);
+        textAlign(CENTER, CENTER);
+        textSize(16);
+        text("%d º".formatted(carIndex + 1), position.x(), position.y());
+
+        fill(0);
+        textAlign(LEFT, CENTER);
+        textSize(14);
+
+        String carName = "%s [%d]".formatted(car.getName(), carIndex);
+        text(carName, namePosition.x(), namePosition.y());
+
+        textAlign(RIGHT, CENTER);
+        text(FormatEpochSecondToString.formatEpochSecond(finishTime).substring(11), timePosition.x(), timePosition.y());
+    }
+
     private void drawMessages() {
-        // Mensagens da corrida no canto inferior esquerdo
         fill(255, 255, 255, 200);
         rect(10, Config.HEIGHT - 30 - raceMessages.size() * 20, 450, 20 + raceMessages.size() * 20);
 
         fill(0);
         textAlign(LEFT);
         textSize(14);
+
         synchronized (raceMessages) {
             for (int i = 0; i < raceMessages.size(); i++) {
                 text(raceMessages.get(i), 20, Config.HEIGHT - 20 - (raceMessages.size() - i - 1) * 20);
@@ -435,13 +533,11 @@ public class ThreadRacing extends PApplet {
         }
     }
 
-
-
     private void drawSemaphore(int countdownValue) {
         fill(50);
         stroke(20);
         strokeWeight(2);
-        rect(Config.WIDTH / 2 - 40, Config.HEIGHT / 2 - 120, 80, 240, 10);
+        rect(((float) Config.WIDTH / 2) - 40, ((float) Config.HEIGHT / 2) - 120, 80, 240, 10);
 
         int lightRadius = 25;
         int lightSpacing = 70;
@@ -453,6 +549,7 @@ public class ThreadRacing extends PApplet {
         } else {
             fill(100, 0, 0);
         }
+
         circle(centerX, startY, lightRadius * 2);
 
         if (countdownValue == 2) {
@@ -460,6 +557,7 @@ public class ThreadRacing extends PApplet {
         } else {
             fill(100, 100, 0);
         }
+
         circle(centerX, startY + lightSpacing, lightRadius * 2);
 
         if (countdownValue <= 1) {
@@ -467,6 +565,7 @@ public class ThreadRacing extends PApplet {
         } else {
             fill(0, 100, 0);
         }
+
         circle(centerX, startY + lightSpacing * 2, lightRadius * 2);
 
         noFill();
@@ -477,10 +576,11 @@ public class ThreadRacing extends PApplet {
         } else if (countdownValue == 2) {
             stroke(255, 255, 100, 150);
             circle(centerX, startY + lightSpacing, lightRadius * 2 + 10);
-        } else if (countdownValue <= 1) {
+        } else {
             stroke(100, 255, 100, 150);
             circle(centerX, startY + lightSpacing * 2, lightRadius * 2 + 10);
         }
+
         stroke(0);
         strokeWeight(1);
     }
